--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@ body{
 }
 
 .card__content__container {
-    padding: 30px;
+    padding: 20px 30px;
 }
 
 .card__content__span {
@@ -69,6 +69,7 @@ body{
 
 .card__newPrice {
     color: hsl(158, 36%, 37%);
+    font-size: 36px;
     font-family: 'Fraunces', serif;
 }
 
@@ -82,7 +83,7 @@ body{
     text-align: center;
     font-weight: 700;
     color: #fff;
-    padding: 20px;
+    padding: 10px;
     font-family: 'Fraunces', serif;
     border-radius: 10px;
     transition: all .5s ease;
